--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,17 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.4.0"
     implementation 'androidx.preference:preference:1.1.1'
 
+    //RxJava, RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+
+    implementation 'com.google.dagger:dagger:2.29.1'
+    kapt 'com.google.dagger:dagger-compiler:2.29.1'
+
+    implementation 'com.google.dagger:dagger-android-support:2.29.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.29.1'
+
 }
 
 kapt {
