--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,12 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.29.1'
     kapt 'com.google.dagger:dagger-android-processor:2.29.1'
 
+
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
 }
 
 kapt {
